# lilium_webdav

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  schema.sql  setup_test.sql  test_mount.sh
db/: connection.rs  mod.rs  validation.rs
src/: cli.rs  commands.rs  main.rs
src/webdav/: auth.rs  davfile.rs  filesystem.rs  mod.rs
tests/: test_webdav.py
tests/fixtures/: test_db.sqlite
